# crafting-interpreter2

./: .gitignore  CMakeLists.txt  README.md  analysis.txt  chall_notes.txt  chunk.c  chunk.h  common.h  compiler.c  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  run_tests.sh  scanner.c  scanner.h  table.c  table.h  test.lox  test_current_feature.lox  value.c  value.h  vm.c  vm.h
.github/workflows/: ci.yml
benchmark/: op_negate.lox  op_negate_optimize.lox  op_subtract.lox  small_string.lox
side/pratt-parser/bantam/: bantam_parser.py  lexer.py  main.py  parser.py
side/pratt-parser/bantam/expressions/: expression.py
side/pratt-parser/bantam/parselets/: prefix_parselet.py
tests/: generate_op_constant_long_test.sh  op_constant_long.lox  test.lox  test_op_constant_long.lox
tests/comments/: custom_ones.lox
tests/ternary/: assignment.lox  associativity_grouping.lox  ternary.lox
tests/utilities/: substract_arithmetic.sh
